--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+@import "board.scss";
+
+
+
 /*@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,700);
 @import url(https://fonts.googleapis.com/css?family=Signika);
 @import url(https://fonts.googleapis.com/css?family=Kalam);*/
