r_登录页面样式修正

--- a/client/src/style/board.scss
+++ b/client/src/style/board.scss
@@ -1,5 +1,11 @@
-.board{
+.board {
   display: flex;
   flex-direction: column;
   flex-basis: 220px;
+  max-width: 260px;
+  .channel {
+    margin: 8px 0 32px 0;
+    padding: 0 16px;
+    min-width: 200px;
+  }
 }
